feat: default EMS_EXCLUDED_CONTENT_TYPES value in web and admin

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -46,6 +46,7 @@ EMSCH_LOCALES='["en","fr","nl"]'
 #EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
 #EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/links/{type}.ems_link.twig'
 #EMSCH_TEMPLATE_ERROR='@EMSCH/template/views/error/error{code}.html.twig'
+EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
 ###< EMSClientHelperBundle ###
 
 ###> EMSCoreBundle ###
