feat: exclude content types in demo

--- a/demo/configs/elasticms-web/zz-live.env
+++ b/demo/configs/elasticms-web/zz-live.env
@@ -34,6 +34,7 @@ EMS_STORAGES='[{"type":"s3","upload-folder":"/tmp/ems-uploads","credentials":{"v
 EMS_CACHE='redis'
 EMS_CACHE_PREFIX='${INSTANCE_ID}live'
 EMS_METRIC_ENABLED=true
+EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
 ###> Common ###
 
 ###> EMSCH ###
