feat: ems_core.template_namespace

--- a/elasticms-admin/config/packages/ems_core.yaml
+++ b/elasticms-admin/config/packages/ems_core.yaml
@@ -56,6 +56,7 @@ parameters:
     env(EMSCO_URL_USER): ~
     env(EMSCO_CUSTOM_USER_OPTIONS_FORM): ~
     env(EMSCO_FALLBACK_LOCALE): 'en'
+    env(EMSCO_TEMPLATE_NAMESPACE): 'EMSCore'
 
     env(EMSCO_LDAP_ENABLED): true
     env(EMSCO_LDAP_DN_STRING): '%env(string:LDAP_DN_STRING)%'
@@ -96,6 +97,7 @@ ems_core:
     url_user: '%env(string:EMSCO_URL_USER)%'
     custom_user_options_form: '%env(string:EMSCO_CUSTOM_USER_OPTIONS_FORM)%'
     fallback_locale: '%env(string:EMSCO_FALLBACK_LOCALE)%'
+    template_namespace: '%env(string:EMSCO_TEMPLATE_NAMESPACE)%'
 
     ldap:
         enabled: '%env(bool:EMSCO_LDAP_ENABLED)%'
