--- a/EMS/admin-ui-bootstrap-5-bundle/package.json
+++ b/EMS/admin-ui-bootstrap-5-bundle/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["elasticms","boostrap 5","AdminLTE],
+  "keywords": [
+    "elasticms",
+    "boostrap 5",
+    "AdminLTE"
+  ],
   "author": "https://github.com/ems-project",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
