--- a/elasticms-admin/config/packages/assets.yaml
+++ b/elasticms-admin/config/packages/assets.yaml
@@ -5,5 +5,7 @@ framework:
                 json_manifest_path: '%kernel.project_dir%/public/bundles/emsform/manifest.json'
             emscore:
                 json_manifest_path: '%kernel.project_dir%/public/bundles/emscore/manifest.json'
+            emsadminui:
+                json_manifest_path: '%kernel.project_dir%/public/bundles/emsadminui/manifest.json'
             emsch:
                 version_strategy: 'emsch.twig.runtime.asset_vserion_strategy'
