chore: update autolabeler config

--- a/.github/autolabeler.yml
+++ b/.github/autolabeler.yml
@@ -4,8 +4,11 @@ elasticms-admin: ["/elasticms-admin"]
 elasticms-web: ["/elasticms-web"]
 elasticms-cli: ["/elasticms-cli"]
 demo: ["/demo"]
+admin-ui-bundle: ["/EMS/admin-ui-bundle"]
 client-helper-bundle: ["/EMS/client-helper-bundle"]
 common-bundle: ["/EMS/common-bundle"]
 core-bundle: ["/EMS/core-bundle"]
 form-bundle: ["/EMS/form-bundle"]
+helpers: ["/EMS/helpers"]
 submission-bundle: ["/EMS/submission-bundle"]
+xliff: ["/EMS/xliff"]
