--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -14,6 +14,7 @@ parameters:
         - %currentWorkingDirectory%/release
     excludePaths:
         - %currentWorkingDirectory%/vendor/*
+        - %currentWorkingDirectory%/EMS/admin-ui-bundle/src/Resources/*
         - %currentWorkingDirectory%/EMS/client-helper-bundle/src/Resources/*
         - %currentWorkingDirectory%/EMS/common-bundle/src/Resources/*
         - %currentWorkingDirectory%/EMS/core-bundle/src/Resources/*
