chore: remove scripts phpcs, phpstan and phpall from child repos

--- a/EMS/core-bundle/composer.json
+++ b/EMS/core-bundle/composer.json
@@ -62,9 +62,6 @@
 		"sort-packages": true
 	},
 	"scripts": {
-		"phpcs": "php-cs-fixer fix",
-		"phpstan": "phpstan analyse --memory-limit 1G",
-		"phpunit": "phpunit",
-		"phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
+		"phpunit": "phpunit"
 	}
 }
