--- a/EMS/xliff/composer.json
+++ b/EMS/xliff/composer.json
@@ -51,9 +51,6 @@
 		}
 	},
 	"scripts": {
-		"phpcs": "php-cs-fixer fix",
-		"phpstan": "phpstan analyse",
-		"phpunit":  "phpunit",
-		"phpall": "php-cs-fixer fix && phpunit && phpstan analyse"
+		"phpunit":  "phpunit"
 	}
 }
