--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
+* text eol=lf
 
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
@@ -8,6 +8,7 @@
 *.twig text eol=lf
 *.env text eol=lf
 *.sh text eol=lf
+*.json text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
