--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "admin-lte": "^3.2.0",
+    "bootstrap": "^5.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
