fix(common/storage): add a new file helper

--- a/EMS/helpers/composer.json
+++ b/EMS/helpers/composer.json
@@ -19,7 +19,8 @@
 		"ext-json": "*",
 		"ext-tidy": "*",
 		"symfony/html-sanitizer": "^6.2",
-		"symfony/options-resolver": "^5.4"
+		"symfony/options-resolver": "^5.4",
+		"symfony/mime": "^5.4"
 	},
 	"require-dev" : {
 		"mockery/mockery" : "^0.9",
