--- a/EMS/admin-ui-bundle/package.json
+++ b/EMS/admin-ui-bundle/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.7.0"
   }
 }
