fix(demo): upgrade 5.7 and DB_SCHEMA_NAME -> DB_SCHEMA

--- a/demo/.env
+++ b/demo/.env
@@ -1,16 +1,15 @@
 # Project namespace (defaults to the current folder name if not set)
 COMPOSE_PROJECT_NAME=elasticms_demo
 
-EMS_VERSION=5.6
+EMS_VERSION=5.7
 INSTANCE_ID='ems_promo_v2_'
 EMS_BACKEND_URL=http://local.ems-demo-admin:9000
 EMS_ADMIN_URL=http://local.ems-demo-admin.localhost
 
-DB_USER=postgres
+DB_USER=demo
 DB_PASSWORD=s3cr3t
-DB_NAME=postgres
-DB_SCHEMA=public
-DB_SCHEMA_NAME=public
+DB_NAME=demo
+DB_SCHEMA=schema_demo
 DB_HOST=postgres
 
 S3_BUCKET_NAME=demo
