--- a/demo/configs/elasticms-admin/ems-demo-dev.env
+++ b/demo/configs/elasticms-admin/ems-demo-dev.env
@@ -25,7 +25,7 @@ DB_USER='${DB_USER}'
 DB_PASSWORD='${DB_PASSWORD}'
 DB_PORT='${DB_PORT}'
 DB_NAME='${DB_NAME}'
-DB_SCHEMA=${DB_SCHEMA_NAME}
+DB_SCHEMA=${DB_SCHEMA}
 ###< Database ###
 
 ###> EMSCommonBundle ###
