fix(config): correct .env.dist for ADMIN & WEB
Alphabetically and only configured mono docker environment variables.

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -3,79 +3,137 @@ APP_ENV=dev
 APP_SECRET=7b19a4a6e37b9303e4f6bca1dc6691ed
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
+#DEFAULT_LOCAL=en
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
 MAILER_URL=smtp://localhost:1025
 ###< symfony/mailer ###
 
-###> doctrine/doctrine-bundle ###
-#DB_HOST='127.0.0.1'
-#DB_DRIVER='mysql'
-#DB_USER='root'
-#DB_PASSWORD='mariadb'
-#DB_PORT='3306'
-#DB_NAME='demo'
-#DB_URL="mysql://root:mariadb@127.0.0.1:3306/demo?serverVersion=mariadb-10.4.11"
-DB_URL="pgsql://demo:demo@127.0.0.1:5432/demo"
-###< doctrine/doctrine-bundle ###
+###> symfony/ldap ###
+#APP_LDAP_ENCRYPTION=none
+#APP_LDAP_PORT=389
+#APP_LDAP_PROTOCOLE_VERSION=3
+#APP_LDAP_SERVER=
+###< symfony/ldap ###
 
 ###> Redis ###
 REDIS_HOST=localhost
 REDIS_PORT=6379
 ###< Redis ###
 
-###> EMSCommonBundle ###
-EMS_ELASTICSEARCH_HOSTS='["http://es.localhost"]'
-EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
-EMS_CACHE=file_system
-EMS_CACHE_PREFIX=''
-EMS_METRIC_ENABLED=false
-EMS_METRIC_HOST=''
-#EMS_METRIC_PORT=''
-#EMS_HASH_ALGO='sha1'
-#EMS_BACKEND_URL=''
-#EMS_BACKEND_API_KEY=''
-###< EMSCommonBundle ###
+###> doctrine/doctrine-bundle ###
+#DB_CONNECTION_TIMEOUT=30
+DB_DRIVER=pgsql
+DB_HOST=127.0.0.1
+#DB_NAME=elasticms
+#DB_PASSWORD=pass
+DB_PORT=5432
+#DB_URL=
+#DB_USER=user
+#DB_VERSION=11
+###< doctrine/doctrine-bundle ###
 
-###> EMSClientHelperBundle ###
-EMSCH_LOCALES='["en","fr","nl"]'
-#EMSCH_INSTANCE_ID='demo_pgsql_v1_'
-#EMSCH_TRANSLATION_TYPE='label'
-#EMSCH_ROUTE_TYPE='route'
-#EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
-#EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/links/{type}.ems_link.twig'
-#EMSCH_TEMPLATE_ERROR='@EMSCH/template/views/error/error{code}.html.twig'
-EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
-###< EMSClientHelperBundle ###
-
-###> EMSCoreBundle ###
-EMSCO_TIKA_SERVER='http://tika.localhost'
-EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
-EMSCO_INSTANCE_ID=elasticms_
-EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
-EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
-EMSCO_THEME_COLOR='purple'
-#EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
+###> elasticms/core-bundle ###
+#EMSCO_ASSET_CONFIG='[]'
+#EMSCO_CIRCLES_OBJECT=
+#EMSCO_CUSTOM_USER_OPTIONS_FORM=
+#EMSCO_DATEPICKER_DAYSOFWEEK_HIGHLIGHTED='[0, 6]'
 #EMSCO_DATEPICKER_FORMAT='dd/mm/yyyy'
 #EMSCO_DATEPICKER_WEEKSTART=1
-#EMSCO_DATEPICKER_DAYSOFWEEK_HIGHLIGHTED='[0,6]'
-EMSCO_FROM_EMAIL_ADDRESS='elasticms@example.com'
-EMSCO_FROM_EMAIL_NAME='elasticms'
-#EMSCO_ALLOW_USER_REGISTRATION=false
-#EMSCO_ASSET_CONFIG_TYPE=''
-#EMSCO_ASSET_CONFIG_INDEX=''
-#EMSCO_UPLOAD_FOLDER=''
-#EMS_CIRCLES_OBJECT=''
+#EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
+#EMSCO_DEFAULT_BULK_SIZE=500
+#EMSCO_FALLBACK_LOCALE=en
+#EMSCO_FROM_EMAIL_ADDRESS=elasticms@example.com
+#EMSCO_FROM_EMAIL_NAME=elasticms
+#EMSCO_INSTANCE_ID=elasticms_
+#EMSCO_LDAP_BASE_DN=
+#EMSCO_LDAP_DEFAULT_ROLES='[]'
+#EMSCO_LDAP_DISPLAY_NAME_FIELD=
+#EMSCO_LDAP_DN_STRING=
+#EMSCO_LDAP_EMAIL_FIELD=
+#EMSCO_LDAP_ENABLED=true
+#EMSCO_LDAP_EXTRA_FIELDS='[]'
+#EMSCO_LDAP_FILTER=
+#EMSCO_LDAP_PASSWORD_ATTRIBUTE=
+#EMSCO_LDAP_SEARCH_DN=
+#EMSCO_LDAP_SEARCH_PASSWORD=
+#EMSCO_LDAP_UID_KEY=
+#EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
+#EMSCO_PAGING_SIZE=20
 #EMSCO_PRE_GENERATED_OUUIDS=false
-#EMSCO_URL_USER=''
-#EMSCO_CUSTOM_USER_OPTIONS_FORM='user'
-###< EMSCoreBundle ###
+#EMSCO_PRIVATE_KEY=
+#EMSCO_PUBLIC_KEY=
+#EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
+#EMSCO_TEMPLATE_NAMESPACE=EMSCore
+EMSCO_THEME_COLOR='purple'
+#EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
+EMSCO_TIKA_SERVER='http://localhost:9998'
+#EMSCO_TRIGGER_JOB_FROM_WEB=true
+#EMSCO_URL_USER=
+###< elasticms/core-bundle ###
+
+###> elasticms/common-bundle ###
+#EMS_BACKEND_API_KEY=
+#EMS_BACKEND_API_VERIFY=true
+#EMS_BACKEND_URL=
+EMS_CACHE=redis
+EMS_CACHE_PREFIX=elasticms
+#EMS_ELASTICSEARCH_CONNECTION_POOL=
+EMS_ELASTICSEARCH_HOSTS='["http://localhost:9201","http://localhost:9202","http://localhost:9203"]'
+EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
+#EMS_HASH_ALGO=sha1
+#EMS_LOG_LEVEL=250
+#EMS_METRIC_ENABLED=false
+#EMS_METRIC_HOST=
+#EMS_METRIC_PORT=
+EMS_STORAGES='[{"type":"s3","usage":"cache","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9000","use_path_style_endpoint":true}}]'
+EMS_STORE_DATA_SERVICES=[]
+#EMS_WEBALIZE_DASHABLE_REGEX='/[\/\_\|\ \-]+/'
+#EMS_WEBALIZE_REMOVABLE_REGEX='/([^a-zA-Z0-9\_\|\ \-\.])|(\.$)/'
+###< elasticms/common-bundle ###
+
+###> elasticms/client-helper-bundle ###
+#EMSCH_ASSET_CONFIG_TYPE=
+#EMSCH_ASSET_LOCAL_FOLDER=
+#EMSCH_BACKEND_API_KEY=
+#EMSCH_BACKEND_URL=
+#EMSCH_BIND_LOCALE=false
+#EMSCH_DUMP_ASSETS=true
+#EMSCH_ENV=
+#EMSCH_ENVS={}
+#EMSCH_LOCALES='["fr","nl"]'
+#EMSCH_LOCAL_PATH=
+#EMSCH_ROUTE_TYPE=route
+#EMSCH_SEARCH_CONFIG={}
+#EMSCH_SEARCH_LIMIT=1000
+#EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
+#EMSCH_TEMPLATE_EMS_LINK=@EMSCH/template/{type}.ems_link.twig
+#EMSCH_TEMPLATE_ERROR=@EMSCH/template/error{code}.html.twig
+#EMSCH_TRANSLATION_TYPE=label
+###< elasticms/client-helper-bundle ###
 
 ###> elasticms/form-bundle ###
+#EMSF_CACHEABLE=true
+#EMSF_DOMAIN_FIELD=domain
+#EMSF_ENDPOINTS=[]
+#EMSF_FORM_FIELD=form
+#EMSF_FORM_SUBFORM_FIELD=sub_form
+#EMSF_FORM_TEMPLATE_FIELD=form_template
 #EMSF_HASHCASH_DIFFICULTY=16384
-#EMSF_ENDPOINTS='[]'
-#EMSF_LOAD_FROMJSON='false'
-#EMSF_CACHEABLE='true'
+#EMSF_LOAD_FROMJSON=true
+#EMSF_NAME_FIELD=name
+#EMSF_SUBMISSION_FIELD=submissions
+#EMSF_THEME_FIELD=theme_template
 #EMSF_TYPE=form_instance
+#EMSF_TYPE_FORM_CHOICE=form_choice
+#EMSF_TYPE_FORM_FIELD=form_structure_field
+#EMSF_TYPE_FORM_MARKUP=form_structure_markup
+#EMSF_TYPE_FORM_SUBFORM=form_structure
+#EMSF_TYPE_FORM_VALIDATION=form_validation
 ###< elasticms/form-bundle ###
+
+###> elasticms/submission-bundle ###
+#EMSS_CONNECTIONS=[]
+#EMSS_DEFAULT_TIMEOUT=10
+###< elasticms/submission-bundle ###
