--- a/elasticms-admin/.env.local.dist
+++ b/elasticms-admin/.env.local.dist
@@ -8,6 +8,7 @@ EMSCH_ENV='default'
 EMSCH_ENVS='{"default":{"alias":"ems_promo_v2_preview","backend":"http://localhost:8881","router": false, "default": true}}'
 EMSCH_LOCALES='["fr","nl"]'
 EMSCH_LOCAL_PATH='../demo/skeleton'
+EMSCH_ASSET_LOCAL_FOLDER='bundles/demo'
 EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"name": "name","code": "body"}}'
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
