fix: admin add emsch_routes

--- a/elasticms-admin/config/routes.yaml
+++ b/elasticms-admin/config/routes.yaml
@@ -7,3 +7,7 @@ probe:
 ems_common:
     resource: 'ems_common.route.loader::load'
     type: service
+
+emsch_routes:
+    resource: 'emsch.routing.route_loader'
+    type: service
