fix: ROLE_API not needed for login api

--- a/elasticms-admin/config/packages/security.yaml
+++ b/elasticms-admin/config/packages/security.yaml
@@ -74,6 +74,7 @@ security:
         - { path: ^/data/asset, role: PUBLIC_ACCESS }
         - { path: ^/channel/, role: PUBLIC_ACCESS }
         - { path: ^/bundles, role: PUBLIC_ACCESS }
+        - { path: ^/api/user-profile, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api, roles: ROLE_API }
         - { path: ^/api/admin, roles: ROLE_ADMIN }
         - { path: ^/admin, roles: ROLE_ADMIN }
