--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -53,6 +53,9 @@
           <directory>./elasticms-admin/tests</directory>
           <exclude>./elasticms-admin/tests/Controller</exclude>
           <directory>./elasticms-cli/tests</directory>
+          <exclude>./elasticms-cli/tests/WebToElasticms/Helper/TikaClientTest.php</exclude>
+          <exclude>./elasticms-cli/tests/WebToElasticms/Helper/TikaPromiseTest.php</exclude>
+          <exclude>./elasticms-cli/tests/WebToElasticms/Helper/TikaTest.php</exclude>
           <directory>./elasticms-web/tests</directory>
           <directory>./EMS/client-helper-bundle/tests</directory>
           <directory>./EMS/common-bundle/tests</directory>
