--- a/demo/configs/admin/content-type/release.json
+++ b/demo/configs/admin/content-type/release.json
@@ -66,7 +66,7 @@
                                 },
                                 "mappingOptions": {
                                     "index": null,
-                                    "analyzer": "keyword",
+                                    "analyzer": "version",
                                     "copy_to": null
                                 },
                                 "restrictionOptions": {
