--- a/release/.env
+++ b/release/.env
@@ -2,3 +2,6 @@ APP_NAME='Elasticms Release'
 APP_VERSION='v0.2.0'
 APP_ENV='dev'
 APP_DEBUG='true'
+
+GITHUB_TOKEN=
+GITHUB_REPOS='[{"name":"ems-project/EMSAdminUIBundle","package":"elasticms/admin-ui-bundle","group":"package"}]'
