--- a/demo/docker-elasticms.yml
+++ b/demo/docker-elasticms.yml
@@ -33,18 +33,18 @@ services:
       - TRUSTED_HOSTS=localhost,*.localhost
       - APP_SECRET=ThisIsSecret
     volumes:
-      - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_preview
+      - ./skeleton:/opt/src/local/${INSTANCE_ID}preview
       - ./configs/elasticms-admin:/opt/configs
       - ./configs/admin:/opt/src/admin
       - ./configs/document:/opt/src/document
-#      - ../elasticms-admin/config:/opt/src/config
-#      - ../EMS/client-helper-bundle:/opt/src/vendor/elasticms/client-helper-bundle
-#      - ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
-#      - ../EMS/core-bundle:/opt/src/vendor/elasticms/core-bundle
-#      - ../EMS/form-bundle:/opt/src/vendor/elasticms/form-bundle
-#      - ../EMS/helpers:/opt/src/vendor/elasticms/helpers
-#      - ../EMS/submission-bundle:/opt/src/vendor/elasticms/submission-bundle
-#      - ../EMS/xliff:/opt/src/vendor/elasticms/xliff
+      - ../elasticms-admin/config:/opt/src/config
+      - ../EMS/client-helper-bundle:/opt/src/vendor/elasticms/client-helper-bundle
+      - ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
+      - ../EMS/core-bundle:/opt/src/vendor/elasticms/core-bundle
+      - ../EMS/form-bundle:/opt/src/vendor/elasticms/form-bundle
+      - ../EMS/helpers:/opt/src/vendor/elasticms/helpers
+      - ../EMS/submission-bundle:/opt/src/vendor/elasticms/submission-bundle
+      - ../EMS/xliff:/opt/src/vendor/elasticms/xliff
 
   web:
     image: elasticms/website-skeleton:${EMS_VERSION}
