chore(phpunit/config): manage trigger_error return
PHPUnit no longer converts PHP deprecations to exceptions by default (configure convertDeprecationsToExceptions="true" to enable this) https://github.com/sebastianbergmann/phpunit/blob/9.5.28/ChangeLog-9.5.md#9510---2021-09-25

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,8 @@
          colors="true"
          bootstrap="vendor/autoload.php"
          failOnRisky="true"
-         failOnWarning="true">
+         failOnWarning="true"
+         convertDeprecationsToExceptions="true">
 
   <coverage>
     <include>
