--- a/composer.json
+++ b/composer.json
@@ -111,7 +111,7 @@
     "twig/twig": "^3.0"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.0",
+    "friendsofphp/php-cs-fixer": "3.14.2",
     "http-interop/http-factory-guzzle": "^1.0",
     "knplabs/github-api": "^3.0",
     "knplabs/packagist-api": "^2.0",
