--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -72,5 +72,6 @@
   </listeners>
   <extensions>
     <extension class="Zalas\PHPUnit\Globals\AnnotationExtension" />
+    <extension class="EMS\CommonBundle\Tests\Hook\BypassFinalHook" />
   </extensions>
 </phpunit>
