--- a/EMS/common-bundle/phpunit.xml.dist
+++ b/EMS/common-bundle/phpunit.xml.dist
@@ -28,4 +28,8 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
     </listeners>
+
+  <extensions>
+    <extension class="EMS\CommonBundle\Tests\Hook\BypassFinalHook"/>
+  </extensions>
 </phpunit>
