--- a/elasticms-admin/config/packages/security.yaml
+++ b/elasticms-admin/config/packages/security.yaml
@@ -58,6 +58,13 @@ security:
     access_control:
         - { path: ^/$, role: PUBLIC_ACCESS }
         - { path: ^/metrics$, role: PUBLIC_ACCESS }
+        - { path: ^/favicon.ico$, role: PUBLIC_ACCESS }
+        - { path: ^/apple\-touch\-icon\.png$, role: PUBLIC_ACCESS }
+        - { path: ^/favicon\-(16|32|48|64|128|256)x(16|32|48|64|128|256)\.png$, role: PUBLIC_ACCESS }
+        - { path: ^/mstile\-(150)x(150)\.png$, role: PUBLIC_ACCESS }
+        - { path: ^/android\-chrome\-(192|256|512)x(192|256|512).png$, role: PUBLIC_ACCESS }
+        - { path: ^/browserconfig\.xml$, role: PUBLIC_ACCESS }
+        - { path: ^/site\.webmanifest, role: PUBLIC_ACCESS }
         - { path: ^/_readiness$, role: PUBLIC_ACCESS }
         - { path: ^/_liveness$, role: PUBLIC_ACCESS }
         - { path: ^/public/, role: PUBLIC_ACCESS }
