fix: make not yet ready (roolback)

--- a/demo/.env
+++ b/demo/.env
@@ -6,10 +6,10 @@ INSTANCE_ID='ems_promo_v2_'
 EMS_BACKEND_URL=http://local.ems-demo-admin:9000
 EMS_ADMIN_URL=http://local.ems-demo-admin.localhost
 
-DB_USER=demo
+DB_USER=postgres
 DB_PASSWORD=s3cr3t
-DB_NAME=demo
-DB_SCHEMA=schema_demo
+DB_NAME=postgres
+DB_SCHEMA=public
 DB_HOST=postgres
 
 S3_BUCKET_NAME=demo
