--- a/demo/configs/admin/content-type/release.json
+++ b/demo/configs/admin/content-type/release.json
@@ -168,7 +168,7 @@
             "create": "ROLE_AUTHOR",
             "edit": "ROLE_AUTHOR",
             "publish": "ROLE_PUBLISHER",
-            "delete": "not-defined",
+            "delete": "ROLE_PUBLISHER",
             "trash": "not-defined",
             "archive": "not-defined",
             "show_link_create": "ROLE_USER",
