--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -23,7 +23,7 @@ jobs:
           coverage: none
 
       - name: "Install Composer Dependencies"
-        uses: ramsey/composer-install@v1
+        uses: ramsey/composer-install@v2
 
       - name: "Run php-cs-fixer"
         run: vendor/bin/php-cs-fixer fix --diff --dry-run --config=.php-cs-fixer.dist.php
@@ -43,7 +43,7 @@ jobs:
             tools: cs2pr
 
       -   name: "Install Composer Dependencies"
-          uses: ramsey/composer-install@v1
+          uses: ramsey/composer-install@v2
 
       -   name: "Run phpstan"
           run: vendor/bin/phpstan analyse --no-progress --error-format=checkstyle | cs2pr
@@ -55,13 +55,13 @@ jobs:
       - name: "Checkout code"
         uses: actions/checkout@v4
       - name: "Install PHP with extensions"
-        uses: shivammathur/setup-php@2.7.0
+        uses: shivammathur/setup-php@v2
         with:
           coverage: "none"
           php-version: ${{ env.PHP_VERSION }}
           tools: composer:v2
       - name: "Composer install"
-        uses: ramsey/composer-install@v1
+        uses: ramsey/composer-install@v2
       - name: "PHPUnit version"
         run: vendor/bin/phpunit --version
       - name: "Run tests"
