--- a/.github/workflows/commit_quality.yml
+++ b/.github/workflows/commit_quality.yml
@@ -3,13 +3,14 @@ name: Commit Quality
 on:
   pull_request_target:
 
+permissions:
+    pull-requests: read
+
 jobs:
-  semantic-pull-request:
-    name: Semantic-Pull-Request
-    runs-on: ubuntu-latest
-    steps:
-      # Please look up the latest version from
-      # https://github.com/amannn/action-semantic-pull-request/releases
-      - uses: amannn/action-semantic-pull-request@v3.4.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    main:
+        name: Validate PR title
+        runs-on: ubuntu-latest
+        steps:
+            - uses: amannn/action-semantic-pull-request@v5
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
