--- a/EMS/admin-ui-bundle/.gitattributes
+++ b/EMS/admin-ui-bundle/.gitattributes
@@ -3,6 +3,7 @@
 /.gitignore export-ignore
 /package-lock.json export-ignore
 /webpack.config.js export-ignore
+/assets export-ignore
 
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
