--- a/elasticms-admin/.env.local.dist
+++ b/elasticms-admin/.env.local.dist
@@ -1,7 +1,7 @@
 EMS_BACKEND_URL='http://localhost:8881'
 
 ###> demo ###
-DB_URL="pgsql://demo:s3cr3t@127.0.0.1:5432/demo"
+DB_URL="pgsql://demo:demo@127.0.0.1:5432/demo"
 EMSCO_INSTANCE_ID=ems_promo_v2_
 
 EMSCH_ENV='default'
