--- a/elasticms-admin/config/packages/ems_core.yaml
+++ b/elasticms-admin/config/packages/ems_core.yaml
@@ -35,6 +35,7 @@ parameters:
     env(EMS_ELASTICSEARCH_HOSTS): '%env(string:ELASTICSEARCH_CLUSTER)%'
     env(EMSCO_TIKA_SERVER): '%env(string:TIKA_SERVER)%'
     env(EMSCO_TIKA_DOWNLOAD_URL): '%env(string:TIKA_DOWNLOAD_URL)%'
+    env(EMSCO_TIKA_MAX_CONTENT): 5120
     env(EMSCO_PRIVATE_KEY): '%env(string:EMS_PRIVATE_KEY)%'
     env(EMSCO_PUBLIC_KEY): '%env(string:EMS_PUBLIC_KEY)%'
     env(EMSCO_INSTANCE_ID): '%env(string:EMS_INSTANCE_ID)%'
@@ -91,6 +92,7 @@ ems_core:
     asset_config: '%env(json:EMSCO_ASSET_CONFIG)%'
     tika_server: '%env(string:EMSCO_TIKA_SERVER)%'
     tika_download_url: '%env(string:EMSCO_TIKA_DOWNLOAD_URL)%'
+    tika_max_content: '%env(int:EMSCO_TIKA_MAX_CONTENT)%'
     trigger_job_from_web:  '%env(bool:EMSCO_TRIGGER_JOB_FROM_WEB)%'
     pre_generated_ouuids: '%env(bool:EMSCO_PRE_GENERATED_OUUIDS)%'
     default_bulk_size: '%env(int:EMSCO_DEFAULT_BULK_SIZE)%'
